# engine-3d

./: CMakeLists.txt  CMakePresets.json  README.md  engine design thoughts.xopp
resources/models/cube/: cube.blend  cube.gltf  textured_cube.gltf
resources/models/materials/: cube.mtl
resources/shaders/: fragmentShader.frag  vertexShader.vert  vertexShader.vs
source/core/: cubemap.cpp  model.cpp  model_loader.cpp  shader.cpp  shader_loader.cpp  spectator.cpp
source/core/include/: camera.h  cubemap.h  model.h  model_loader.h  shader.h  shader_loader.h  spectator.h
source/platform/: app.cpp  process_input.cpp  process_keys.cpp
source/platform/include/: app.h  process_input.h  process_keys.h
